--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
 
   <!-- Your code here -->
+  <img
+  src="https://imgur.com/lVzYgxa"
+  alt="Me pondering my orb"
+  title="Orb Ponderer"
+  />
 
+  <img
+  src="https://imgur.com/wKI2khj"
+  alt="You better not be pondering your orb"
+  title="Totally pondering my orb"
+  />
+
+  <img
+  src="https://imgur.com/YDMe9cz"
+  alt="Viewers like you"
+  title="This program was"
+  />
 </body>
 </html>
